# visura

./: .env.example  .gitignore  DESIGN.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: visura-skill.md
examples/: bfl-klein-desk-lamp.visura.toml  blueprint-desk-lamp.visura.toml  coffee-packaging-mockup.visura.toml  launch-metrics-infographic.visura.toml  my-headshot.visura.toml  workshop-poster.visura.toml
src/visura/: __init__.py  cli.py  compiler.py  loader.py  render.py  spec.py  status.py
src/visura/backends/: __init__.py  base.py  bfl.py  diffusers.py  mock.py  openai.py
src/visura/kinds/: __init__.py  base.py  builtin.py
tests/: test_cli.py  test_diffusers_backend.py  test_e2e.py  test_loader.py  test_openai_backend.py
